--- a/GitHubStatus/Base.lproj/LaunchScreen.storyboard
+++ b/GitHubStatus/Base.lproj/LaunchScreen.storyboard
@@ -40,7 +40,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.27843138579999999" green="0.98823535439999999" blue="0.18431372939999999" alpha="1" colorSpace="deviceRGB"/>
                         <constraints>
                             <constraint firstAttribute="leadingMargin" secondItem="2yN-hh-nkQ" secondAttribute="leading" id="BJG-kW-4QZ"/>
                             <constraint firstItem="2yN-hh-nkQ" firstAttribute="top" secondItem="4Kh-hk-3j0" secondAttribute="bottom" constant="-178" id="GCp-w3-RCm"/>
