--- a/GitHubStatus/Base.lproj/LaunchScreen.storyboard
+++ b/GitHubStatus/Base.lproj/LaunchScreen.storyboard
@@ -22,29 +22,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="computerIcon.png" translatesAutoresizingMaskIntoConstraints="NO" id="2yN-hh-nkQ">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GitStatIcon.png" translatesAutoresizingMaskIntoConstraints="NO" id="2yN-hh-nkQ">
                                 <rect key="frame" x="16" y="134" width="343" height="333"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="343" id="Hbs-A6-dT2"/>
                                     <constraint firstAttribute="height" constant="333" id="gwF-4d-sxg"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Git Status" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Kh-hk-3j0">
-                                <rect key="frame" x="115" y="184" width="144" height="128"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="MXg-tP-Ho4"/>
-                                    <constraint firstAttribute="width" constant="144" id="V4M-9r-CS7"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="AmericanTypewriter-CondensedBold" family="American Typewriter" pointSize="50"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.27843138579999999" green="0.98823535439999999" blue="0.18431372939999999" alpha="1" colorSpace="deviceRGB"/>
                         <constraints>
                             <constraint firstAttribute="leadingMargin" secondItem="2yN-hh-nkQ" secondAttribute="leading" id="BJG-kW-4QZ"/>
-                            <constraint firstItem="2yN-hh-nkQ" firstAttribute="top" secondItem="4Kh-hk-3j0" secondAttribute="bottom" constant="-178" id="GCp-w3-RCm"/>
-                            <constraint firstItem="2yN-hh-nkQ" firstAttribute="leading" secondItem="4Kh-hk-3j0" secondAttribute="trailing" constant="-243" id="TxD-CV-IPM"/>
                             <constraint firstAttribute="trailingMargin" secondItem="2yN-hh-nkQ" secondAttribute="trailing" id="Xf8-cx-D2w"/>
                             <constraint firstItem="2yN-hh-nkQ" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="114" id="mYR-xn-y7C"/>
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="2yN-hh-nkQ" secondAttribute="bottom" constant="200" id="zkN-H7-ID0"/>
@@ -57,6 +45,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="computerIcon.png" width="512" height="512"/>
+        <image name="GitStatIcon.png" width="512" height="512"/>
     </resources>
 </document>
