--- a/GitHubStatus/Base.lproj/LaunchScreen.storyboard
+++ b/GitHubStatus/Base.lproj/LaunchScreen.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dLX-GS-Ddu">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -23,23 +23,42 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GitStatusIcon.png" translatesAutoresizingMaskIntoConstraints="NO" id="2yN-hh-nkQ">
-                                <rect key="frame" x="16" y="134" width="343" height="333"/>
+                                <rect key="frame" x="16" y="178" width="343" height="289"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="343" id="Hbs-A6-dT2"/>
-                                    <constraint firstAttribute="height" constant="333" id="gwF-4d-sxg"/>
+                                    <constraint firstAttribute="height" constant="289" id="SiM-CE-6d8"/>
+                                    <constraint firstAttribute="width" constant="343" id="jqP-aV-8fU"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.27843138579999999" green="0.98823535439999999" blue="0.18431372939999999" alpha="1" colorSpace="deviceRGB"/>
                         <constraints>
-                            <constraint firstAttribute="leadingMargin" secondItem="2yN-hh-nkQ" secondAttribute="leading" id="BJG-kW-4QZ"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="2yN-hh-nkQ" secondAttribute="trailing" id="Xf8-cx-D2w"/>
-                            <constraint firstItem="2yN-hh-nkQ" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="114" id="mYR-xn-y7C"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="2yN-hh-nkQ" secondAttribute="bottom" constant="200" id="zkN-H7-ID0"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="2yN-hh-nkQ" secondAttribute="trailing" id="3os-yE-uQb"/>
+                            <constraint firstItem="2yN-hh-nkQ" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="114" id="MH7-1t-xiG"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="2yN-hh-nkQ" secondAttribute="leading" id="YBn-Pu-WPg"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="2yN-hh-nkQ" secondAttribute="bottom" constant="200" id="bQS-aX-zYD"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="dLv-yy-ZJW"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="991.20000000000005" y="374.66266866566718"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="4wu-yA-qVs">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dLX-GS-Ddu" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="XAr-M5-l6C">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="01J-lp-oVM" kind="relationship" relationship="rootViewController" id="gIp-GW-xYg"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FX0-dw-Pu7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
